--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.jonny.instalike">
-
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.REQUEST_COMPANION_USE_DATA_IN_BACKGROUND"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <application
         android:allowBackup="true"
         android:icon="@drawable/instaicon"
@@ -10,11 +11,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.InstaLike">
         <activity
-            android:name=".LoginActivity"
+            android:name=".PostActivity"
             android:exported="false" />
         <activity
+            android:name=".LoginActivity"
+            android:exported="true"
+            android:label="Login" />
+        <activity
             android:name=".RegisterActivity"
-            android:exported="false" />
+            android:exported="true"
+            android:label="Register"
+            android:parentActivityName=".LoginActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true" />
@@ -31,6 +38,9 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
+        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat"/>
     </application>
 
 </manifest>
